--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
   <script type="text/javascript" src='node_modules/angular/angular.min.js'></script>
   <script type="text/javascript" src='node_modules/angular-ui-router/release/angular-ui-router.min.js'></script>
+  <script type="text/javascript" src='node_modules/jquery/dist/jquery.min.js'></script>
+  <script type="text/javascript" src='node_modules/foundation-sites/dist/js/foundation.min.js'></script>
   <script type="text/javascript" src='dist/js/scripts.js'></script>
   <link rel="stylesheet" href="dist/css/styles.css">
 </head>
