--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
   <link rel="stylesheet" href="dist/css/styles.css">
 </head>
 <body>
+
+  <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
+    <button class="menu-icon" type="button" data-toggle></button>
+    <div class="title-bar-title">Menu</div>
+  </div>
+  <div class="top-bar" id="main-menu">
+  <div class="top-bar-left">
+    <ul class="dropdown menu" data-dropdown-menu>
+      <li class="menu-text">Site Title</li>
+    </ul>
+  </div>
+  <div class="top-bar-left">
+    <ul class="menu vertical medium-horizontal " data-responsive-menu="drilldown medium-dropdown">
+
+      <li><a href="#">Two</a></li>
+      <li><a href="#">Three</a></li>
+    </ul>
+  </div>
+</div>
+
+
+
   <ui-view></ui-view>
 </body>
 </html>
