--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src='dist/js/scripts.js'></script>
   <link rel="stylesheet" href="node_modules/angular-loading-bar/build/loading-bar.min.css">
   <link rel="stylesheet" href="dist/css/styles.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  
 </head>
 <body>
 
